kube/dev/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: simpl-dev
  namespace: simpl
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: simpl-dev
    spec:
      containers:
      - image: learninglab.githost.io:4678/lldev-team/simpl-games-api:v1.3.4
        imagePullPolicy: Always
        name: simpl
        ports:
        - containerPort: 80
      imagePullSecrets:
        - name: learninglab.githost.io
