kube/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpl-dev
  namespace: simpl
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: simpl-dev
